--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,42 +1,57 @@
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+
+:root {
+  --dark-color: #130f40;
+  --medium-color: #1e186b;
+  --light-color: #30336b;
+}
+
 #root {
   max-width: 1280px;
-  margin: 0 auto;
+  margin: 0 auto auto auto;
   padding: 2rem;
   text-align: center;
 }
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+body {
+  font-family: "Work Sans", sans-serif;
+  font-optical-sizing: auto;
+  letter-spacing: 0.02em;
+  background: var(--dark-color);
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+form {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+input {
+  width: 100%; /* use 80% if using button as well (button has width 20%) */
+  padding: 0.8rem 0.8rem;
+  outline: none;
+  border: 1px solid #fff;
+  border-radius: 10px;
+  font-size: 1em;
+  background: var(--light-color);
 }
 
-.card {
-  padding: 2em;
+.wordBox {
+  border: 2px solid #fff;
+  border-radius: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0.5rem 0.8rem;
+  font-size: 1em;
+  margin: 0.5em 0;
+  background: var(--medium-color);
+  background-size: 100% 100%;
 }
-
-.read-the-docs {
-  color: #888;
+.word {
+  text-align: left;
+  font-weight: bold;
+}
+.rank {
+  text-align: right;
+  font-weight: bold;
 }
